# manifetch

./: .env.example  .gitignore  README.md  alembic.ini  index.html  pyproject.toml  requirements.txt  reset_db.py  stream_publisher.py  test_ws.py
ai_module/: inference_controller.py  inference_service.py  prepare_features.py  train_model.py
ai_module/models/: apnea_best.pkl  cv_apnea.json  cv_cardiac.json  cv_sepsis.json  lgb_label_cardiac.pkl  lgb_label_sepsis.pkl  metrics_apnea.json  metrics_cardiac.json  metrics_sepsis.json  model_lgb_apnea.pkl  model_lgb_cardiac.pkl  model_lgb_sepsis.pkl  model_xgb_apnea.pkl  model_xgb_cardiac.pkl  model_xgb_sepsis.pkl  shap_apnea.csv  shap_cardiac.csv  shap_sepsis.csv  temporal_validation_apnea.json  temporal_validation_cardiac.json  temporal_validation_sepsis.json  xgb_label_apnea.pkl  xgb_label_cardiac.pkl  xgb_label_sepsis.pkl
ai_module/tests/: test_ai_module.py  test_temporal.py  test_unit.py
backend/: main.py
backend/alembic/: env.py
backend/api/: admin.py  auth.py  dashboard.py  ingestion.py  (+3 more)
data_simulation/: generator.py  stream_publisher.py
docs/: Sirkete_Sorular.docx
frontend/: package-lock.json
models/: metrics_apnea.json  metrics_cardiac.json  metrics_sepsis.json  model_cardiac.pkl  model_lgb_apnea.pkl  model_lgb_sepsis.pkl  model_xgb_apnea.pkl  model_xgb_cardiac.pkl  model_xgb_sepsis.pkl  shap_apnea.csv  shap_cardiac.csv  shap_sepsis.csv  temporal_validation_apnea.json  temporal_validation_cardiac.json  temporal_validation_sepsis.json
tests/: test_integration.py  test_performance.py  test_unit.py
(+57 files in other folders)
