[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "manifetch"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.42.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.18.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "aiohttp>=3.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]